# phys-403

./: .gitignore  README.md
NotoLinkGenerator/: notoLinkGenerator.py
Task1/: osc1d.ipynb  utilities.py
Task2/: MD.py  MD_gap.py  step1.ipynb  step2.ipynb  step3.ipynb  utilities.py
Task3/: MD.py  step1.ipynb  step2.ipynb  step3.ipynb
Task4/: ran.py  ran_gauss.py  ran_walk.py  step.ipynb  test_corr.py  test_ran.py
Task4/output_test_chisq2d/: chisq-ran0_1000x110000-11  chisq-ran0_1000x1100000-11  chisq-ran0_1000x11000000-11  chisq-ran0_1000x110000000-11  chisq-ran1_1000x110000-11  chisq-ran1_1000x1100000-11  chisq-ran1_1000x11000000-11  chisq-ran1_1000x110000000-11  chisq-ran2_1000x110000-11  chisq-ran2_1000x1100000-11  chisq-ran2_1000x11000000-11  chisq-ran2_1000x110000000-11  chisq-ran3_1000x110000-11  chisq-ran3_1000x1100000-11  chisq-ran3_1000x11000000-11  chisq-ran3_1000x110000000-11  chisq2d-ran0_1000x110000-11  chisq2d-ran0_1000x1100000-11  chisq2d-ran0_1000x11000000-11  chisq2d-ran0_1000x110000000-11  chisq2d-ran1_1000x110000-11  (+27 more)
Task5a/: ising.ipynb  ising.py  mc.py  pi.ipynb
Task5b/: blocking.ipynb
Task6/: 01_mc_sc.ipynb  02_blocking.ipynb  03_mc_argon.ipynb  MC.py
md/: distance.py  integrators.py  lennard_jones.py  measures.py  nve.py  nve_step1.py  nvt.py  nvt_step1.py  step3.py  structure.py
simple-md/: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml  setup.py
simple-md/examples/: test.py
simple-md/src/simple_md/: __init__.py  integrator.py  postprocess.py  potential.py  structure.py  system.py
utils/: plotstyle.mplstyle
